<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eBike</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="rent">租车</string>
    <string name="finish">完成</string>
    <string name="routing">路线</string>
    <string name="privateinfo">我的</string>
     <string name="alerting">注意</string> 

     <string name="ok">确定</string>
    <string name="comfirm">确认</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="resend">重新发送</string>
    
    <string name="selfspace">个人中心</string>
    <string name="selfspaceSetting">个人信息设置</string>
    <string name="orderList">租车记录</string>
    <string name="orderDetail">租车记录详情</string>
    <string name="accountSetting">账户设置</string>
    
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="render">性别</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="psdHits">请输入6位~20位密码，数字和字母大小写</string>
    
    
    <string name="modifyPassword">修改账户密码</string>
    <string name="currentPassword">当前密码</string>
    <string name="newPassword">新密码</string>
    <string name="comfirNewPassword">确认新密码</string>
    <string name="comfirSubmit">确认提交</string>
    
    <string name="securityVerify">安全验证</string>
    <string name="verify">验证</string>
    <string name="getverifyCode">获取验证码</string>
    
    <string name="pay">付款</string>
    
    <string name="male">男</string>
    <string name="female">女</string>
</resources>
