<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebike_light_bg"
    android:orientation="vertical" >
    
	<RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:background="@color/darkcyan"
        android:gravity="center_vertical"
        android:layout_height="@dimen/tile_height" >

        <TextView
            android:id="@+id/bikefree_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/modifyPassword"
            android:textSize="@dimen/text_large_size" />
       
        <Button
            android:id="@+id/backBtn"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"     
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_returnback"
            />

    </RelativeLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_marginTop="10dp"
		    android:background="@color/white">

		    <ImageView
	            android:id="@+id/imageView141"
	            android:scaleType="fitXY"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/img_horizionlinebar" />
		    
			<EditText
			    android:id="@+id/current_password_edittext"
			    android:layout_width="fill_parent"
			    android:layout_height="@dimen/input_height"
			    android:background="@null"
			    android:ems="10"
			    android:hint="@string/currentPassword"
			    android:inputType="textPassword"
			    android:paddingLeft="@dimen/text_margin"
			    android:singleLine="true"
			    android:textSize="@dimen/text_little_size" >
			    <requestFocus />
			    </EditText>
			
			<ImageView
	            android:id="@+id/imageView142"
	            android:scaleType="fitXY"
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:layout_below="@+id/textView2"
	            android:src="@drawable/img_horizionlinebar" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/white" >

		    
		    
			<EditText
			    android:id="@+id/new_password_edittext"
			    android:layout_width="fill_parent"
			    android:layout_height="@dimen/input_height"
			    android:background="@null"
			    android:ems="10"
			    android:hint="@string/newPassword"
			    android:inputType="textPassword"
			    android:paddingLeft="@dimen/text_margin"
			    android:singleLine="true"
			    android:textSize="@dimen/text_little_size" >

			    
			</EditText>

			<ImageView
            android:id="@+id/imageView144"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />
			
		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/white" >

			<EditText
			    android:id="@+id/confirm_new_password_edittext"
			    android:layout_width="fill_parent"
			    android:layout_height="@dimen/input_height"
			    android:background="@null"
			    android:ems="10"
			    android:hint="@string/comfirNewPassword"
			    android:inputType="textPassword"
			    android:paddingLeft="@dimen/text_margin"
			    android:singleLine="true"
			    android:textSize="@dimen/text_little_size" />

			<ImageView
            android:id="@+id/imageView146"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />
			
		</LinearLayout> 
		
		<TextView
            android:id="@+id/textView33"
            android:layout_below="@id/phone_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:text="密码长度至少6个字符，最多20个字符，包含数字和字母大小写" />

		<Button
		    android:id="@+id/submitBtn"
		    android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_green_btn"
		    android:textColor="@color/white"
		    android:textSize="@dimen/text_large_size"
		    android:text="@string/comfirSubmit" />
		
    </LinearLayout>

</LinearLayout>
