<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ebike_light_bg" >
    
	<RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:background="@color/darkcyan"
        android:paddingLeft="@dimen/title_padding"
        android:paddingRight="@dimen/title_padding"
        android:gravity="center_vertical"
        android:layout_height="@dimen/tile_height" >

        <TextView
            android:id="@+id/bikefree_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="@dimen/text_large_size" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:textColor="@drawable/selector_text_click_white"
            android:textSize="@dimen/text_little_size"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_text_click_white"
            android:textSize="@dimen/text_little_size"
            android:background="@color/transparent"
			 />
    </RelativeLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/info_text_view"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dp"
		    android:paddingBottom="10dp"
		    android:layout_marginLeft="@dimen/text_margin"
		    android:textSize="@dimen/text_little_size"		    
		    android:text="TextView" />

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_marginLeft="@dimen/text_margin"
		    android:textSize="@dimen/text_little_size"
		    android:text="请输入收到的验证码：" />

		<ImageView
            android:id="@+id/imageView14"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:background="@color/white">

			<EditText
			    android:id="@+id/code_edit_text"
			    android:layout_width="fill_parent"
			    android:layout_height="@dimen/input_height"
			    android:layout_marginLeft="@dimen/text_margin"
			    android:background="@null"
			    android:ems="6"
			    android:inputType="number"
			    android:singleLine="true"
			    android:textSize="@dimen/text_little_size" />

		</LinearLayout>

		<ImageView
            android:id="@+id/imageView12"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />
		
		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="20dp"
		    android:layout_gravity="center_horizontal"
		    android:text="还没收到验证码？" 
		    android:textSize="@dimen/text_little_size"/>

		<Button
		    android:id="@+id/resend_button"
		    android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_margin="20dp"
		    android:layout_gravity="center_horizontal"		    
	        android:background="@drawable/selector_green_btn"
	        android:textColor="@color/white"
		    android:text="@string/resend" />

	</LinearLayout>

</LinearLayout>
