<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:background="@color/darkcyan"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/title_padding"
        android:paddingRight="@dimen/title_padding"
        android:layout_height="@dimen/tile_height" >

        <TextView
            android:id="@+id/bikefree_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="@dimen/text_large_size" />

        <Button
            android:id="@+id/okBtn"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:text="@string/ok"
            android:textColor="@drawable/selector_text_click_white"
            android:textSize="@dimen/text_little_size"
            android:background="@color/transparent"/>
        
        <Button
            android:id="@+id/cancelBtn"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_text_click_white"
            android:textSize="@dimen/text_little_size"
            android:background="@color/transparent"
			 />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/ebike_light_bg">

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/img_denglu" />

        
        <TextView
                    android:id="@+id/textView223"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/ebike_split_line" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="@color/white">

            <TextView
                android:id="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:textSize="@dimen/text_little_size"
                android:layout_alignTop="@+id/phone_edittext"
                android:layout_alignBottom="@+id/phone_edittext"
                android:gravity="center_vertical"
                android:text="@string/phoneNumber" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/split"
                android:textSize="@dimen/text_little_size"
                android:layout_alignTop="@+id/password_edittext"
                android:layout_alignBottom="@+id/password_edittext"
                android:gravity="center_vertical"
                android:text="@string/password" />

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_height"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textView2"
                android:ems="10"
                android:singleLine="true"
                android:inputType="phone"
                android:background="@null" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password_edittext"
                android:layout_height="@dimen/input_height"
                android:layout_width="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/split"
                android:layout_toRightOf="@+id/textView3"
                android:layout_alignLeft="@+id/phone_edittext"
                android:ems="10"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@null" />
            
             <TextView
                    android:id="@+id/split"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/ebike_split_line" 
                    android:layout_below="@+id/textView2"/>

        </RelativeLayout>

        <TextView
                    android:id="@+id/textView221"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/ebike_split_line" />
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
             >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_little_size"
                android:text="还没有账号？" />

            <TextView
                android:id="@+id/register_link_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_little_size"
                android:textColor="@color/darkcyan"
                android:text="点击注册" />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>