<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebike_light_bg"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:background="@color/darkcyan"
        android:paddingLeft="@dimen/title_padding"
        android:paddingRight="@dimen/title_padding"
        android:gravity="center_vertical"
        android:layout_height="@dimen/tile_height" >

        <TextView
            android:id="@+id/bikefree_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="@dimen/text_large_size" />

        <Button
            android:id="@+id/finishBtn"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:text="@string/finish"
            android:textColor="@drawable/selector_text_click_white"
            android:textSize="@dimen/text_little_size"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_text_click_white"
            android:textSize="@dimen/text_little_size"
            android:background="@color/transparent"
			 />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/text_little_size"
            android:hint="请输入6-20位的密码，数字和字母大小写"
            android:text="请输入密码：" />

        <ImageView
            android:id="@+id/imageView11"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginLeft="@dimen/text_margin"
                
                android:background="@null"
                android:ems="10"
                android:hint="@string/psdHits"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/text_little_size" >
				<requestFocus />
			</EditText>
        </LinearLayout>
        
        <ImageView
            android:id="@+id/imageView12"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="确认密码："
            android:textSize="@dimen/text_little_size" />

        <ImageView
            android:id="@+id/imageView13"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/password_comfirm_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginLeft="@dimen/text_margin"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="@dimen/text_little_size"
                android:singleLine="true">

                
            </EditText>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView14"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView2"
            android:src="@drawable/img_horizionlinebar" />
        
    </LinearLayout>

</LinearLayout>
